2주차 총정리

--- a/oz_2week/3회차/join.html
+++ b/oz_2week/3회차/join.html
@@ -14,7 +14,7 @@
             <th>아이디</th>
             <td>
               <!-- autocomplete="off"=> 자동 완성 기능을 꺼준다. -->
-              <!-- required 필수 입력란 -->
+              <!-- required => 필수 입력란 -->
               <input name="id" placeholder="아이디" autocomplete="off" required />
             </td>
           </tr>
