미션 4단계 완료

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -15,7 +15,10 @@
           <div class="topButton" style="background-color: #28c841"></div>
         </div>
       </div>
+      <!-- <div class="displays"> -->
+      <!-- <div class="previousRecord"></div> -->
       <div class="display">0</div>
+      <!-- </div> -->
       <div class="buttons">
         <button value="AC" class="button function" style="background-color: #6d6f71">AC</button>
         <button value="+/-" class="button function" style="background-color: #6d6f71">+/-</button>
@@ -35,7 +38,7 @@
         <button value="+" class="button operator" style="background-color: #ff9500">+</button>
         <button value="0" class="number button zero" style="background-color: #4f5153">0</button>
         <button value="." class="pot number button" style="background-color: #4f5153">.</button>
-        <button id="equals" class="button" style="background-color: #ff9500">=</button>
+        <button value="=" class="button" style="background-color: #ff9500">=</button>
       </div>
     </div>
     <script src="calculator.js"></script>
