전 계산 기록 보이게 하기

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -15,10 +15,10 @@
           <div class="topButton" style="background-color: #28c841"></div>
         </div>
       </div>
-      <!-- <div class="displays"> -->
-      <!-- <div class="previousRecord"></div> -->
-      <div class="display">0</div>
-      <!-- </div> -->
+      <div class="displays">
+        <div class="previousRecord"></div>
+        <div class="display">0</div>
+      </div>
       <div class="buttons">
         <button value="AC" class="button function" style="background-color: #6d6f71">AC</button>
         <button value="+/-" class="button function" style="background-color: #6d6f71">+/-</button>
@@ -42,5 +42,6 @@
       </div>
     </div>
     <script src="calculator.js"></script>
+    <script src="appleCalculator.js"></script>
   </body>
 </html>
