html,css code 정리

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -20,28 +20,29 @@
         <div class="display">0</div>
       </div>
       <div class="buttons">
-        <button value="AC" class="button function" style="background-color: #6d6f71">AC</button>
-        <button value="+/-" class="button function" style="background-color: #6d6f71">+/-</button>
-        <button value="%" class="button function" style="background-color: #6d6f71">%</button>
-        <button value="/" class="button operator" style="background-color: #ff9500">÷</button>
-        <button value="7" class="number button" style="background-color: #4f5153">7</button>
-        <button value="8" class="number button" style="background-color: #4f5153">8</button>
-        <button value="9" class="number button" style="background-color: #4f5153">9</button>
-        <button value="*" class="button operator" style="background-color: #ff9500">×</button>
-        <button value="4" class="number button" style="background-color: #4f5153">4</button>
-        <button value="5" class="number button" style="background-color: #4f5153">5</button>
-        <button value="6" class="number button" style="background-color: #4f5153">6</button>
-        <button value="-" class="button operator" style="background-color: #ff9500">−</button>
-        <button value="1" class="number button" style="background-color: #4f5153">1</button>
-        <button value="2" class="number button" style="background-color: #4f5153">2</button>
-        <button value="3" class="number button" style="background-color: #4f5153">3</button>
-        <button value="+" class="button operator" style="background-color: #ff9500">+</button>
-        <button value="0" class="number button zero" style="background-color: #4f5153">0</button>
-        <button value="." class="pot number button" style="background-color: #4f5153">.</button>
-        <button value="=" class="button" style="background-color: #ff9500">=</button>
+        <button value="AC" class="button allClear gray">AC</button>
+        <button value="clear" class="button clear gray" style="display: none">⌫</button>
+        <button value="+/-" class="button gray">+/-</button>
+        <button value="%" class="button gray">%</button>
+        <button value="/" class="button operator orange">÷</button>
+        <button value="7" class="button number darkGray">7</button>
+        <button value="8" class="button number darkGray">8</button>
+        <button value="9" class="button number darkGray">9</button>
+        <button value="*" class="button operator orange">×</button>
+        <button value="4" class="button number darkGray">4</button>
+        <button value="5" class="button number darkGray">5</button>
+        <button value="6" class="button number darkGray">6</button>
+        <button value="-" class="button operator orange">−</button>
+        <button value="1" class="button number darkGray">1</button>
+        <button value="2" class="button number darkGray">2</button>
+        <button value="3" class="button number darkGray">3</button>
+        <button value="+" class="button operator orange">+</button>
+        <button value="0" class="button number zero darkGray">0</button>
+        <button value="." class="button number darkGray">.</button>
+        <button value="=" class="button orange">=</button>
       </div>
     </div>
     <script src="calculator.js"></script>
-    <script src="appleCalculator.js"></script>
+    <!-- <script src="appleCalculator.js"></script> -->
   </body>
 </html>
